--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "deploy:vercel": "vercel --prod",
     "deploy:preview": "vercel",
     "analyze": "ANALYZE=true next build",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "vercel-build": "next build",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "next": "14.0.4",
