--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 # Dependencies
 node_modules/
-*/node_modules/
-
-# Production builds
-.next/
-out/
-dist/
-build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Environment variables
 .env
@@ -14,6 +10,17 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Next.js
+.next/
+out/
+build/
+
+# Vercel
+.vercel/
+
+# TypeScript
+*.tsbuildinfo
 
 # IDE
 .vscode/
@@ -26,17 +33,81 @@ build/
 Thumbs.db
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
 
 # Hardhat
 cache/
 artifacts/
-typechain-types/
+deployments/
+deployments-*.json
+deployment-*.json
+deployed-addresses.json
+deployment-report.json
 
-# Coverage
-coverage/
+# Solidity
+*.sol.bak
 
 # Temporary files
 *.tmp
