--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,28 +15,29 @@
     "vercel-build": "next build"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "wagmi": "^2.12.0",
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
-    "viem": "^2.0.0",
-    "react-hot-toast": "^2.4.1",
     "localforage": "^1.10.0",
-    "openapi-fetch": "^0.8.1"
+    "next": "14.0.4",
+    "openapi-fetch": "^0.8.1",
+    "pino-pretty": "^13.1.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "viem": "^2.0.0",
+    "wagmi": "^2.12.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@next/bundle-analyzer": "^14.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "@next/bundle-analyzer": "^14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5",
     "vercel": "^32.0.0"
   }
 }
