--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,5 +39,8 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vercel": "^32.0.0"
+  },
+  "engines": {
+    "node": ">=18 <=20"
   }
 }
