Remove nixpacks.toml configuration file and update package.json scripts for improved installation process
- Deleted nixpacks.toml as it was no longer needed.
- Updated 'build' script in package.json to include 'npm ci' before building the frontend.
- Renamed 'install:frontend' script to 'install' and added 'postinstall' script for consistency in installation commands.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "PoolFi - Collaborative Savings Platform",
   "private": true,
   "scripts": {
-    "build": "cd frontend && npm run build",
+    "build": "cd frontend && npm ci && npm run build",
     "start": "cd frontend && npm start",
     "dev": "cd frontend && npm run dev",
-    "install:frontend": "cd frontend && npm install"
+    "install": "cd frontend && npm ci",
+    "postinstall": "cd frontend && npm ci"
   },
   "engines": {
     "node": ">=18.0.0",
