Update environment configuration and enhance WaitlistModal functionality
- Updated env.example to include Supabase, PlanetScale, MongoDB, and email configuration variables for better clarity and setup.
- Added @supabase/supabase-js dependency to package.json and package-lock.json for Supabase integration.
- Refactored WaitlistModal to handle API calls for waitlist signup, improving error handling and user feedback.

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,23 +1,23 @@
-# PoolFi Frontend Environment Variables
-# Copy this file to .env.local for local development
-# Set these values in Vercel dashboard for production deployment
+# Database Configuration (Choose one)
 
-# Smart Contract Addresses (Update after deployment)
-NEXT_PUBLIC_POOL_MANAGER_ADDRESS=0x7EF2e0048f5bAeDe046f6BF797943daF4ED8CB47
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# WalletConnect Project ID (Get from https://cloud.walletconnect.com/)
-# Required for wallet connection functionality
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=e621e0027ef5a2a1afdcc6351101a95c
+# PlanetScale (MySQL)
+DATABASE_HOST=your_planetscale_host
+DATABASE_USERNAME=your_username
+DATABASE_PASSWORD=your_password
+DATABASE_NAME=your_database_name
 
-# Reef Network Configuration
-# For production, use the main Reef network RPC
-NEXT_PUBLIC_REEF_RPC_URL=https://rpc.reefscan.com
-NEXT_PUBLIC_REEF_CHAIN_ID=13939
+# MongoDB
+MONGODB_URI=your_mongodb_connection_string
+MONGODB_DATABASE=poolfi
 
-# Optional: Analytics and monitoring
-# NEXT_PUBLIC_GA_ID=your_google_analytics_id
-# NEXT_PUBLIC_SENTRY_DSN=your_sentry_dsn
+# Email Configuration
+RESEND_API_KEY=your_resend_api_key
+EMAIL_FROM=noreply@yourdomain.com
+ADMIN_EMAIL=admin@yourdomain.com
 
-# Production optimizations
-NODE_ENV=production
-NEXT_TELEMETRY_DISABLED=1
+# Optional: Analytics
+GOOGLE_ANALYTICS_ID=your_ga_id
