--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
+    "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.0.0",
     "localforage": "^1.10.0",
     "next": "14.0.4",
