--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,18 +1,14 @@
-# Database Configuration (Choose one)
+# Database Configuration
+# PostgreSQL Database URL
+DATABASE_URL="postgresql://username:password@localhost:5432/poolfi?schema=public"
 
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Smart Contract Configuration
+NEXT_PUBLIC_POOL_MANAGER_ADDRESS=0x7EF2e0048f5bAeDe046f6BF797943daF4ED8CB47
+NEXT_PUBLIC_REEF_RPC_URL=http://34.123.142.246:8545
+NEXT_PUBLIC_REEF_CHAIN_ID=13939
 
-# PlanetScale (MySQL)
-DATABASE_HOST=your_planetscale_host
-DATABASE_USERNAME=your_username
-DATABASE_PASSWORD=your_password
-DATABASE_NAME=your_database_name
-
-# MongoDB
-MONGODB_URI=your_mongodb_connection_string
-MONGODB_DATABASE=poolfi
+# WalletConnect (optional)
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your_project_id
 
 # Email Configuration
 RESEND_API_KEY=your_resend_api_key
