--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,17 @@
     "type-check": "tsc --noEmit",
     "vercel-build": "next build",
     "railway:build": "next build",
-    "railway:start": "next start"
+    "railway:start": "next start",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:push": "prisma db push",
+    "db:reset": "prisma migrate reset",
+    "db:seed": "prisma db seed",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.1",
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.0.0",
@@ -24,6 +32,7 @@
     "next": "14.0.4",
     "openapi-fetch": "^0.8.1",
     "pino-pretty": "^13.1.1",
+    "prisma": "^6.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
