--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "react-hot-toast": "^2.4.1",
     "@prisma/client": "^6.17.1",
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@supabase/supabase-js": "^2.75.1",
@@ -42,15 +41,15 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.19.23",
+    "@types/react": "18.3.26",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
+    "typescript": "5.9.3",
     "vercel": "^32.0.0"
   }
 }
